bug culdesac fix